Add Wikitext parser and various fixes

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "ext-json": "*",
+        "ext-dom": "*"
     },
     "autoload": {
         "psr-4": {
