Add caching by default

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": ">=7.1",
         "ext-json": "*",
-        "ext-dom": "*"
+        "ext-dom": "*",
+        "divineomega/do-file-cache-psr-6": "^2.0"
     },
     "autoload": {
         "psr-4": {
