--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=7.1",
         "ext-json": "*",
         "ext-dom": "*",
-        "divineomega/do-file-cache-psr-6": "^2.0"
+        "divineomega/do-file-cache-psr-6": "^2.0",
+        "divineomega/php-wikitext-parser": "^1.0"
     },
     "autoload": {
         "psr-4": {
